--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">RedAlert</string>
+    <string name="select_mood">🌦️ Select Your Mood</string>
+    <string name="select_symptom">💢 Select a Symptom</string>
+    <string name="capture_selfie">📸 Capture Selfie</string>
+    <string name="save_entry">Save Entry</string>
+    <string name="selfie_preview">Selfie preview</string>
+
 </resources>
